--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo do Flavio</title>
-    <link rel="stylesheet" href="cores.css">
 </head>
 <body>
     <img src="foto.png" alt="">
@@ -13,7 +12,7 @@
     <p><strong>Data de nascimento:</strong> 16/09/1985</p>
     <p><strong>Endereço:</strong>Yolanda Barbosa Preto, 32, Jardim Europa, Nova odessa-SP</p>
     <p><strong>Contato:</strong> (19)99882-1845</p>
-    <a><strong>Email:</strong>: flavero@gmail.com</a>
+    <a><strong>Email:</strong>href="mailto:flavero@gmail.com">flavero@gmail.com</a>
 <br>
 <br>
     <h2>Experiência Profisional</h2>
@@ -43,7 +42,8 @@
 <br>
 <br>
     <h2>Idiomas</h2>
-	<strong>Ingles</strong>: Escrita, leitura e fala em níveis intermediários.
+	<strong>Ingles</strong><br>
+    Escrita, leitura e fala em níveis intermediários.
 <br>
 <br>
     <h2>Qualificações</h2><br>
